--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ip": "^1.1.5",
     "music-metadata": "^7.4.0",
     "mysql2": "^2.2.5",
+    "recursive-readdir": "^2.2.2",
     "sequelize": "^6.3.5",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
