--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sqlite3": "^5.0.0",
     "stratter": "^1.0.1",
     "ua-parser-js": "^0.7.22",
-    "vorpal": "^1.12.0"
+    "vorpal": "^1.12.0",
+    "ytdl-core": "^3.3.0"
   }
 }
