--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flake-idgen": "^1.4.0",
     "graceful-fs": "^4.2.4",
     "ip": "^1.1.5",
+    "mime-types": "^2.1.27",
     "music-metadata": "^7.4.0",
     "mysql2": "^2.2.5",
     "recursive-readdir": "^2.2.2",
