--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beacon",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "beacon.js",
   "scripts": {
     "test": "mocha --recursive --exit",
@@ -20,7 +21,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.0.0"
   },
   "dependencies": {
     "biguint-format": "^1.0.2",
