--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/node_modules/
+# Dependencies
+node_modules/
+
+# Local environment
 .env
+
+# SQLite database
 memory
+
+# Webpack files
+dist/*js
