--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "beacon",
+  "name": "castor",
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "beacon.js",
-  "scripts": {
-    "test": "mocha --recursive --exit",
-    "nodemon": "nodemon beacon.js",
-    "postinstall": "npx webpack --config webpack.config.js"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/subiabre/beacon.git"
+    "url": "git+https://github.com/subiabre/castor.git"
   },
   "author": "Subiabre <subiabrewd@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/subiabre/beacon/issues"
+    "url": "https://github.com/subiabre/castor/issues"
   },
-  "homepage": "https://github.com/subiabre/beacon#readme",
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.4",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
-  },
+  "homepage": "https://github.com/subiabre/castor#readme",
   "dependencies": {
     "biguint-format": "^1.0.2",
     "cookies": "^0.8.0",
