--- a/package.json
+++ b/package.json
@@ -15,23 +15,20 @@
   },
   "homepage": "https://github.com/subiabre/castor#readme",
   "dependencies": {
-    "biguint-format": "^1.0.2",
+    "bunyan": "^1.8.14",
     "cookies": "^0.8.0",
     "express": "^4.17.1",
     "file-type": "^15.0.1",
-    "flake-idgen": "^1.4.0",
-    "graceful-fs": "^4.2.4",
     "ip": "^1.1.5",
-    "mime-types": "^2.1.27",
-    "music-metadata": "^7.4.0",
-    "mysql2": "^2.2.5",
-    "recursive-readdir": "^2.2.2",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
     "sequelize": "^6.3.5",
+    "short-uuid": "^4.1.0",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
-    "stratter": "^1.0.1",
     "ua-parser-js": "^0.7.22",
-    "vorpal": "^1.12.0",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
     "ytdl-core": "^3.3.0"
   }
 }
