Replace youtube search

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "bunyan": "^1.8.14",
     "bunyan-express-serializer": "^1.0.0",
     "cookies": "^0.8.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-type": "^15.0.1",
     "hh-mm-ss": "^1.2.0",
@@ -39,7 +38,7 @@
     "ua-parser-js": "^0.7.22",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
-    "youtube-search": "^1.1.4",
-    "ytdl-core": "^3.3.0"
+    "ytdl-core": "^3.3.0",
+    "ytsr": "^1.0.4"
   }
 }
